fix(java17): replace deprecated getFirst() with get(0) in GraphicManager
- Fix compilation error with Java 17+ where List.getFirst() was removed
- getFirst() method was deprecated in Java 8 and removed in Java 9+
- Replace with get(0) with proper null safety checks
- Maintain backward compatibility while supporting modern Java versions

Fixes: COMPILATION_ERROR_INVALID_METHOD_GETFIRST